# SpikingReservoir

./: .gitignore  README.md  res copy.ipynb  res.ipynb  resTokenShift.ipynb  reservoir.py  testing.ipynb
Cneuro/: CMakeLists.txt  TODO  build.bash  global.cpp  global.h  main.cpp  manager.cpp  manager.h  neuron.cpp  neuron.h  scheduler.cpp  scheduler.h
Cneuro/include/: encoder.h  global.h  manager.h  net.h  neuron.h  rl.h  scheduler.h  simulation.h  utilities.h
Cneuro/src/: encoder.cpp  global.cpp  main.cpp  mainz.cpp  manager.cpp  net.cpp  neuron.cpp  rl.cpp  scheduler.cpp  simulation.cpp  utilities.cpp
images/: sdfsfds
python/: main.py  reservoir.ipynb  reservoir.py
